# Just-FastAPI

./: .gitignore  README.md  generic_extended_test.py  log.txt  pyproject.toml
checkers/: fixed_content_query_checker.py
my_libs/: curry.py
router/: cqrs_route.py  main.py  test_route.py
src/: main.py
src/daos/: users.py
src/db/: fake_db.py
src/dependencies/: user_dependency.py
src/dtos/: images.py  items.py  offers.py  users.py
src/exceptions/: unicorn_exception.py
src/first_fastapi/: __init__.py
src/models/: images.py  items.py  offers.py  users.py
src/open_api/: tags.py
src/services/: header_verification_service.py  params_extractor_service.py  users_service.py
