[project]
name = "task-mgmt"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "fResult", email = "Styxmaz@gmail.com" }
]
dependencies = [
    "fastapi[all]>=0.110.0",
    "hypercorn>=0.16.0",
]
readme = "README.md"
requires-python = ">= 3.8"

# [project.scripts]
# dev = 'main:app --reload'

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/task_mgmt"]
