[project]
name = "task-mgmt"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "fResult", email = "Styxmaz@gmail.com" }
]
dependencies = [
    "fastapi>=0.111.0",
    "hypercorn>=0.16.0",
    "email-validator>=2.1.1",
    "pydantic>=2.7.1",
    "python-multipart>=0.0.9",
]
readme = "README.md"
requires-python = ">= 3.8"

# [project.scripts]
# dev = 'main:app --reload'

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "mypy>=1.10.0",
    "isort>=5.13.2",
    "black>=24.4.2",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/task_mgmt"]
